# ecs

./: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  vcpkg.json
include/: base.hpp  component.hpp  component_pool.hpp  components.hpp  dynamic_bitset.hpp  ecs.hpp  entities.hpp  entity.hpp  system.hpp  systems.hpp  test.hpp  types.hpp  world.hpp
lib/: .gitignore
resources/: data.txt
scripts/: compile-shaders.bat  compile-shaders.sh  copy-resources.bat  copy-resources.sh
src/: main.cpp
test/: main.cpp  test_base.hpp
